packages/main/src/components/ObjectPageTitle/ObjectPageTitle.module.css
.container {
  flex: 1 1 100%;
  background-color: var(--sapObjectHeader_Background);
  min-height: 3rem;
  padding-block-start: 0.5rem;
  padding-block-end: 0.5rem;
  position: sticky;
  inset-block-start: 0;
  z-index: 2;
  cursor: pointer;

  &[data-not-clickable='true'] {
    cursor: unset;

    &:hover {
      background-color: var(--sapObjectHeader_Background);
    }
  }

  &:hover {
    background-color: var(--sapObjectHeader_Hover_Background);
  }
}

.phone {
  --_ui5wcr_ObjectPage_title_fontsize: var(--sapObjectHeader_Title_SnappedFontSize);
}

.breadcrumbs {
  min-width: 50%;
  padding: 0.5rem 0 0.25rem 0;

  &:only-child {
    width: 100%;
  }
}

.titleMainSection {
  overflow-x: hidden;
  flex: 1 1 auto;
  align-items: baseline;
}

.middleSection {
  flex-grow: 1;
  width: 100%;
  overflow-x: hidden;
}

.title {
  flex-shrink: 1;
  min-width: 3rem;
  overflow-x: hidden;
  font-family: var(--sapObjectHeader_Title_FontFamily);
  color: var(--sapObjectHeader_Title_TextColor);
  font-size: var(--_ui5wcr_ObjectPage_title_fontsize);
  padding-block-start: 0.3125rem;
  overflow-wrap: break-word;
  hyphens: auto;

  > * {
    font-family: inherit;
    color: inherit;
    font-size: inherit;
    overflow-wrap: inherit;
    hyphens: inherit;
  }
}

.snappedAvatarContainer:has([data-component-name='ObjectPageCollapsedAvatar']) {
  flex-shrink: 0;
}

@container (min-width: 600px) and (max-width: 1023px) {
  .title {
    padding-block-start: 0.6875rem;
  }
}

.subTitle {
  color: var(--sapObjectHeader_Subtitle_TextColor);
  font-size: var(--sapFontSize);
  overflow-wrap: break-word;
  hyphens: auto;
  padding-inline-start: 0.5rem;

  > * {
    color: inherit;
    font-size: inherit;
    overflow-wrap: inherit;
    hyphens: inherit;
  }
}

.subTitleBottom {
  margin-block-start: 0.25rem;
  padding-inline-start: 0;
}

.contentContainer {
  flex: 1 1 0;
  min-width: 0;
}

.content {
  display: flex;
  flex-shrink: 1.6;
  padding-inline-start: 0.5rem;
}

.toolbar {
  flex-grow: 1;
  flex-shrink: 1.6;
  min-width: 3rem;
  display: flex;
  align-items: center;
  justify-content: flex-end;

  > [ui5-toolbar] {
    padding: 0;
    border: none;
  }

  > [ui5-toolbar]:not(:first-child):last-child {
    flex: 0 1;
  }

  > [data-component-name='Toolbar']:not(:first-child):last-child {
    width: unset;
    flex-shrink: 0;
  }

  > [ui5-toolbar]:only-child {
    flex-grow: 1;
    flex-shrink: 0;
  }
}

.actionsSeparator {
  flex-shrink: 0;
  height: var(--_ui5_dynamic_page_title_actions_separator_height);
  width: 0.0625rem;
  background: var(--sapToolbar_SeparatorColor);
}

.clickArea {
  position: absolute;
  inset: 0;
}

